8357917: Assert in MetaspaceShared::preload_and_dump() when printing exception

Reviewed-by: kvn, jrose